package ar.edu.utn.frba.dds.geoRef;

public class MunicipioGeoref {
    public String id;
    public String nombre;
}
